// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/24/2010
	r143 [pakpil]
	* Fixed WL_FROSTMISTY and WL_JACKFROST that aren't working propertly.
	- Bug report 81.

01/23/2010
	r142 [Jobbie]
	* ArchBishop Update:
	- Fixed damage calculation of Adoramus and Judex. Judex should have a sub hits of 3.
	- Redone Clementia, Canto, Praefatio, and Coloceo Heal to display only skill name above the head.
	- Ancilla and Epiclesis used now its official fail message.
	* Ranger Update:
	- Added RA_SENSITIVEKEEN skill.
	- Fixed Camouflage not displaying skill name above the head.
	- Fixed Electricshocker and Wugbite status which should be reduced by 1sec every 10 agi.
	- Fixed when mounting a warg item skills cannot be used.
	- Aimedbolt and Arrowstorm can be used without a bow.
	* Cleaned up some whitespace.
	* Fixed some map_freeblock error caused by some skills.

	r141 [Rytech]
	* Fixed max level to allow up to level 1000 for trunk.

	r140 [pakpil]
	* Fixed SC_GROOMY that wasn't removed mounts.
	* Fixed SC_MANHOLE that was allowing attack while was under this sc.

	r138 [pakpil]
	* Added WM_REVERBERATION and WM_DOMINION_IMPULSE skills.
	* Minor fix in SC_AUTOSHADOWSPELL that cause you can't move if you haven't copied skills.
	* Minor fix in the new clif_skillcasting packet.

01/22/2010
	r135 [pakpil]
	* Added WM_LULLABY_DEEPSLEEP skill working as intended.
	* Minor fix in SO_ARRULLO to show the status propertly.
	* Minor fix in SC_DEADLYINFECT. Removed 2 SC that can't be spreaded.


01/21/2010
	r134 [Rytech]
	*Fixed typos for ARRULLO. Was typed as ARULLO accidently.

01/21/2010
	r133 [Rytech]
	*Added 6 new Sorcerer skills as place holders
	-They will remain disabled until the data is fully added to clients
	*Updated SP requirements for Sorcerer skills
	*Changed Genetics Fire Expansion's Smoke Powder, Tear Gas, and Acid Multi ID skills from 5 to 1.